v1.1.1 - Fixed bug where experiences only showed 12 lines on mobile, increased to 20 lines

--- a/css/experiences.css
+++ b/css/experiences.css
@@ -61,7 +61,7 @@
 }
 
 .experience--expanded .experience__content {
-    --max-line-count: 12;
+    --max-line-count: 20;
 }
 
 .experience__content::before {
